[tool.poetry]
name = "notion-lm-api"
version = "0.1.0"
description = "Notion LifeManagement - an api designed to be called/triggered via notion-lm-tampermonkey scripts when running Notion in chrome browser. Helps automates tasks/project managment"
authors = ["sunnydsouza <dsouzasunny1436@gmail.com>"]
license = "MIT"
readme = "README.md"
repository= "https://github.com/sunnydsouza/notion-lm-api"
documentation="https://github.com/sunnydsouza/notion-lm-api/blob/main/README.md"
# packages = [
#     { include = "notion_lm_api" },
# ]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
urllib3_1_26_2 = "^1.26.2"
requests = "^2.27.1"
# notion-api-py= "1.0.1"
Flask-Cors = "^3.0.10"
pandas = "^1.4.2"
# directory
# notion-api-py = { path = "../notion-api-py/", develop = true }
notion-api-py = "^1.0.2"
playsound = "^1.3.0"
tqdm = "^4.64.0"
# pyobjc = "^8.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[tool.semantic_release]
version_variable = [
    'notion_lm_api/__init__.py:__version__',
     'pyproject.toml:version',
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
